stop-gap solution with proper url handling

--- a/demoscene/static/css/assets/_button.less
+++ b/demoscene/static/css/assets/_button.less
@@ -1,6 +1,6 @@
 .button {
 	display: inline-block;
-	background-color: #e5e5e5;
+	background-color: #f5f5f5;
 	color: #888;
 	overflow: visible;
 	margin: 0;
@@ -17,7 +17,7 @@
 
 	&:link,
 	&:visited {
-		color: #666;
+		color: #888;
 	}
 
 	&:hover {
@@ -43,5 +43,7 @@
 		fill: #888;
 		margin-left: .25em;
 		margin-top: -1px;
+		position: relative;
+		right: -8px;
 	}
 }
