--- a/demoscene/static/css/assets/_panel.less
+++ b/demoscene/static/css/assets/_panel.less
@@ -23,6 +23,6 @@
 	margin-top: 1.5em;
 	padding: 1.5em 0;
 	border-top: 1px solid #e5e5e5;
-
+	margin-bottom: -16px;
 	text-align: right;
 }
